--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   path_provider: ^2.1.5
+  get_it: ^9.0.5
+  cloud_firestore: ^6.1.0
 
 dev_dependencies:
   flutter_test:
