--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   path_provider: ^2.1.5
   get_it: ^9.0.5
   cloud_firestore: ^6.1.0
+  uuid: ^4.5.2
+  analyzer: ^6.4.1
 
 dev_dependencies:
   flutter_test:
