--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   cloud_firestore: ^6.1.0
   uuid: ^4.5.2
   analyzer: ^6.4.1
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
