--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   uuid: ^4.5.2
   analyzer: ^6.4.1
   equatable: ^2.0.7
+  flutter_facebook_auth: ^6.0.4
 
 dev_dependencies:
   flutter_test:
